<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_height="match_parent"
        android:weightSum="100"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:weightSum="100"

        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:text="@string/chargeAmount"/>
        <EditText
            android:layout_weight="50"
            android:layout_width="0dp"
            android:id="@+id/chargeAmountEditText"
            android:layout_height="match_parent" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:weightSum="100"

        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:text="@string/deadline"/>
        <EditText
            android:layout_weight="50"
            android:layout_width="0dp"
            android:id="@+id/deadlineEditText"
            android:inputType="date"
            android:layout_height="match_parent" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="90"
        android:orientation="horizontal"
        >
        <Button
            android:layout_width="match_parent"
            android:id="@+id/submitchargeAmountBtn"
            android:layout_height="wrap_content"
            android:text="@string/submit"/>


    </LinearLayout>


    </LinearLayout>


