<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#ffffff"
    android:layout_height="match_parent"
    android:weightSum="100"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="45"
        android:gravity="center">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="170dp"
            android:layout_weight="1"
            app:srcCompat="@mipmap/ic_launcher" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="55"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">


        <EditText
            android:id="@+id/usernameEditText"
            android:hint="@string/username"
            android:focusable = "true"
            android:ems="10"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorPrimary"
            android:textStyle="bold"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="left|center"
            android:autofillHints="@string/username" />

        <EditText
            android:id="@+id/passEditText"
            android:gravity="left|center"
            android:focusable = "true"

            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:autofillHints=""
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorPrimary"
            android:textStyle="bold" />


        <Button
            android:id="@+id/loginBtn"
            android:layout_marginTop="25dp"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/logIn"
            android:textColor="#ffffff"
            android:textSize="18dp" />


    </LinearLayout>



</LinearLayout>